apps/immich/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: immich
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich
        app.kubernetes.io/component: server
    spec:
      # work around bug with ENV var parsing?
      enableServiceLinks: false
      containers:
        - image: ghcr.io/immich-app/immich-server:v3.2.4
          name: immich-server
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 2283
              name: http
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: photos
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: nfs-photos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning
  namespace: immich
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/component: machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich
        app.kubernetes.io/component: machine-learning
    spec:
      # work around bug with ENV var parsing?
      enableServiceLinks: false
      containers:
        - image: ghcr.io/immich-app/immich-machine-learning:v3.2.4
          name: immich-machine-learning
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 3003
              name: http
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /cache
              name: model-cache
      volumes:
        - name: model-cache
          emptyDir: {}
