apps/immich/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-hl
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: postgres
spec:
  clusterIP: None
  ports:
    - name: tcp-postgres
      port: 5432
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: postgres
spec:
  ports:
    - name: tcp-postgres
      port: 5432
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: server
spec:
  ports:
    - name: http
      port: 3001
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: server
---
apiVersion: v1
kind: Service
metadata:
  name: microservices
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: microservices
spec:
  ports:
    - name: http
      port: 3002
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: microservices
---
apiVersion: v1
kind: Service
metadata:
  name: machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: machine-learning
spec:
  ports:
    - name: http
      port: 3003
  selector:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: machine-learning
